fix z-index sub-menu

--- a/src/assets/common/scss/global/_header.scss
+++ b/src/assets/common/scss/global/_header.scss
@@ -52,6 +52,8 @@
   padding: 20px;
   border-radius: 4px;
   font-size: 14px;
+  top: 22px;
+  z-index: 5;
 }
 
 .roupas-menu::before,
@@ -112,6 +114,7 @@
   display: flex;
   gap: 4px;
   align-items: center;
+  z-index: 1;
 }
 
 .search input,
